feat: implement custom title bar

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -106,4 +106,13 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  /* Electron Drag Regions */
+  .drag {
+    -webkit-app-region: drag;
+  }
+
+  .no-drag {
+    -webkit-app-region: no-drag;
+  }
 }
